# event-probability-terminal

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.codex/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/api-gateway/: README.md  package.json  tsconfig.json
apps/web/: components.json  next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
docs/: architecture.md  source_registry.md
docs/adr/: 0001-monorepo-and-service-boundaries.md  0002-eventmarket-binary-outcome-contract.md  0003-pricing-engine-v0-placeholder-contract.md  0004-pricing-engine-v1-research-boundary.md  0005-updown-payoff-and-reference-level-contract.md  0006-rc1-read-only-research-ui.md  0007-rc2-evidence-first-ux.md  0008-rc3-market-detail-contract.md  0009-rc4-api-contract-snapshots-and-ci-hygiene.md  0010-rc5-response-versioning-and-error-taxonomy.md  0012-rc7-research-signal-engine-v0.md  0013-rc8-live-ohlcv-source-adapter.md  0014-rc9-event-signal-console-and-confluence-engine.md  0015-rc11-signal-runtime-and-tuning.md  0016-rc12-reality-observation-and-strategy-tuning.md  0017-rc13-real-data-first-terminal.md  0018-rc14-real-data-integrity.md  0019-rc15-binance-public-kline-terminal.md  0020-rc16-provider-health-observability.md  0021-rc17-realtime-price-and-strategy-research.md  0022-rc18-polymarket-market-odds-binding.md  (+5 more)
(+98 files in other folders)
