[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-probability-terminal"
version = "0.0.0"
description = "Research, probability pricing, paper trading, and replay shells for event probability markets."
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "polars>=1.0",
  "scipy>=1.12",
  "statsmodels>=0.14"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
pricing-engine = "pricing_engine.main:main"

[tool.setuptools.packages.find]
where = ["services/pricing-engine/src"]

[tool.pytest.ini_options]
testpaths = ["services/pricing-engine/tests"]
pythonpath = ["services/pricing-engine/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["services/pricing-engine/src"]

